[workspace]
    members = [
        "examples",
        "tracing-tracy",
        "tracy-client",
        "tracy-client-sys",
    ]
    resolver = "2"

[workspace.package]
    edition      = "2021"
    homepage     = "https://github.com/nagisa/rust_tracy_client"
    license      = "MIT/Apache-2.0"
    rust-version = "1.70.0"
