[package]
    authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
    description = """
Examples for using `tracy-client` in a wgpu application
"""
    edition.workspace = true
    homepage.workspace = true
    license.workspace = true
    name = "tracy-client-examples"
    publish = false
    readme = "README.mkd"
    repository.workspace = true
    rust-version.workspace = true
    version = "0.17.4" # AUTO-BUMP

[dependencies]
    ansistream            = "0.2.0"
    autocfg               = "1.1.0"
    b4s                   = "0.3.4"
    bitflags              = "2.4.2"
    byteorder             = "1.5"
    byteordered           = "0.6.0"
    chardetng             = "0.1.17"
    charset-normalizer-rs = "1.0.6"
    clap                  = { version = "4.5.1", features = ["cargo", "help", "string"] }
    clap_autocomplete     = "0.4.2"
    coarsetime            = "0.1.36"
    colored               = "3.0"
    console               = "0.15.8"
    crossterm             = "0.28"
    derive_more           = { version = "^2", features = ["full"] }
    divan                 = "0.1.17"
    either                = "1.13.0"
    encoding_rs           = "^0.8"
    eval-macro            = "0.5"
    eyeball               = { version = "0.8.8", features = ["async-lock", "tracing"] }
    fancy-regex           = "0.14"
    fastrand              = "2.3.0"
    futures               = "0.3.31"
    ignore                = "^0.4"
    indicatif             = { version = "0.17", features = ["rayon"] }
    itertools             = "0.14.0"
    itoa                  = "1.0.10"
    jwalk                 = "0.8.1"
    lazy_static           = "1.4.0"
    memchr                = "2.7.1"
    memmap2               = "^0.9"
    miette                = { version = "7.2.0", features = ["fancy"] }
    non-empty-vec         = "0.2.3"
    num-format            = "0.4.4"
    num-sign              = "0.1.2"
    once-cell-regex       = "0.2.1"
    once_cell             = "1.20.3"
    parking_lot           = "0.12.3"
    path-absolutize       = "3"
    rand                  = "0.8.4"
    rayon                 = "1.8.1"
    regex                 = "1.10"
    regex-automata        = "0.4.9"
    serde                 = "1.0.197"
    serde_json            = "1.0.115"
    strip-ansi-escapes    = "0.2.0"
    strum                 = { version = "0.27", features = ["derive"] }
    strum_macros          = "0.27"
    tracing               = { version = "0.1.41", features = [] }
    tracing-appender      = "0.2.3"
    tracing-error         = "0.2.1"
    tracing-forest        = "0.1.6"
    tracing-subscriber    = "0.3.19"
    tracing-tracy         = { path = "../tracing-tracy/" }
    tracing-unwrap        = "1.0.1"
    tracy-client          = { path = "../tracy-client" }
    twoway                = "0.2.2"
    wgpu                  = "23.0.1"
    winapi                = "0.3.9"
    yaml-rust2            = "0.10"
