[package]
    authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
    description = """
Examples for using `tracy-client` in a wgpu application
"""
    edition.workspace = true
    homepage.workspace = true
    license.workspace = true
    name = "tracy-client-examples"
    publish = false
    readme = "README.mkd"
    rust-version.workspace = true
    version = "0.17.4" # AUTO-BUMP

[dependencies]
    derive_more        = { version = "^2", features = ["full"] }
    divan              = "0.1.17"
    futures            = "0.3.31"
    rand               = "0.9.2"
    tracing            = { version = "0.1.41", features = [] }
    tracing-appender   = "0.2.3"
    tracing-error      = "0.2.1"
    tracing-forest     = "0.2"
    tracing-subscriber = "0.3.19"
    tracing-tracy      = { path = "../tracing-tracy/" }
    tracing-unwrap     = "1.0.1"
    tracy-client       = { path = "../tracy-client" }
    wgpu               = "23.0.1"
