[package]
    authors = ["Simonas Kazlauskas <tracing-tracy@kazlauskas.me>"]
    description = """
Inspect tracing-enabled Rust applications with Tracy
"""
    documentation = "https://docs.rs/tracing-tracy"
    edition.workspace = true
    homepage.workspace = true
    license.workspace = true
    name = "tracing-tracy"
    readme = "README.mkd"
    rust-version.workspace = true
    version = "0.11.4"

[lib]
    bench   = true
    harness = false

[dependencies]
    client = { package = "tracy-client", path = "../tracy-client", version = ">=0.17.0,<0.19.0", default-features = false }
    tracing-core = { version = "0.1", default-features = false, features = [
        "std",
    ] }
    tracing-subscriber = { version = "0.3", default-features = false, features = [
        "fmt",
        "registry",
    ] }

[dev-dependencies]
    criterion          = "0.5"
    futures            = "0.3"
    tokio              = { version = "1", features = ["full"] }
    tracing            = { version = "0.1", default-features = false, features = ["std"] }
    tracing-attributes = { version = "0.1" }
    tracing-futures    = { version = "0.2" }

[features]
    # Refer to FEATURES.mkd for documentation on features.
    broadcast = ["client/broadcast"]
    callstack-inlines = ["client/callstack-inlines"]
    code-transfer = ["client/code-transfer"]
    context-switch-tracing = ["client/context-switch-tracing"]
    crash-handler = ["client/crash-handler"]
    debuginfod = ["client/debuginfod"]
    default = [
        "broadcast",
        "callstack-inlines",
        "code-transfer",
        "context-switch-tracing",
        "crash-handler",
        "enable",
        "sampling",
        "system-tracing",
    ]
    delayed-init = ["client/delayed-init"]
    demangle = ["client/demangle"]
    enable = ["client/enable"]
    fibers = ["client/fibers"]
    flush-on-exit = ["client/flush-on-exit"]
    manual-lifetime = ["client/manual-lifetime"]
    ondemand = ["client/ondemand"]
    only-ipv4 = ["client/only-ipv4"]
    only-localhost = ["client/only-localhost"]
    sampling = ["client/sampling"]
    system-tracing = ["client/system-tracing"]
    timer-fallback = ["client/timer-fallback"]
    verify = ["client/verify"]

[package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "tracing_tracy_docs"]

[lints.rust.unexpected_cfgs]
    check-cfg = ['cfg(tracing_tracy_docs)']
    level     = "warn"
