[package]
    authors = ["Simonas Kazlauskas <tracy-client@kazlauskas.me>"]
    description = """
High level bindings to the client libraries for the Tracy profiler
"""
    documentation = "https://docs.rs/tracy-client"
    edition.workspace = true
    homepage.workspace = true
    license.workspace = true
    name = "tracy-client"
    readme = "README.mkd"
    rust-version.workspace = true
    version = "0.18.0" # AUTO-BUMP

[[test]]
    harness = false
    name    = "tests"
    path    = "tests/tests.rs"

[[test]]
    harness = false
    name    = "loom"
    path    = "tests/loom.rs"

[[bench]]
    harness = false
    name    = "client"
    path    = "benches/client.rs"

[dev-dependencies]
    criterion = "0.6"

[dependencies]
    once_cell      = "1.19"
    rustc-demangle = { version = "0.1", optional = true }

[dependencies.sys]
    default-features = false
    package          = "tracy-client-sys"
    path             = "../tracy-client-sys"
    version          = ">=0.23.0, <0.25.0"   # AUTO-UPDATE

[target.'cfg(loom)'.dependencies.loom]
    version = "0.7"

[features]
    # Refer to FEATURES.mkd for documentation on features.
    broadcast = ["sys/broadcast"]
    callstack-inlines = ["sys/callstack-inlines"]
    code-transfer = ["sys/code-transfer"]
    context-switch-tracing = ["sys/context-switch-tracing"]
    crash-handler = ["sys/crash-handler"]
    debuginfod = ["sys/debuginfod"]
    default = [
        "broadcast",
        "callstack-inlines",
        "code-transfer",
        "context-switch-tracing",
        "crash-handler",
        "enable",
        "sampling",
        "system-tracing",
    ]
    delayed-init = ["sys/delayed-init"]
    demangle = ["dep:rustc-demangle", "sys/demangle"]
    enable = ["sys/enable"]
    fibers = ["sys/fibers"]
    flush-on-exit = ["sys/flush-on-exit"]
    manual-lifetime = ["sys/manual-lifetime"]
    ondemand = ["sys/ondemand"]
    only-ipv4 = ["sys/only-ipv4"]
    only-localhost = ["sys/only-localhost"]
    sampling = ["sys/sampling"]
    system-tracing = ["sys/system-tracing"]
    timer-fallback = ["sys/timer-fallback"]
    verify = ["sys/verify"]

[package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "tracy_client_docs"]

[lints.rust.unexpected_cfgs]
    check-cfg = ['cfg(loom)', 'cfg(tracy_client_docs)']
    level     = "warn"
